adição de comentários

--- a/notebooks/books-dataset.ipynb
+++ b/notebooks/books-dataset.ipynb
@@ -1313,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11: Preparação final dos dados para os modelos de classificação"
+    "11. Preparação final dos dados para os modelos de classificação"
    ]
   },
   {
@@ -1342,7 +1342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12: Ajuste de hiperparâmetros do Random Forest com GridSearchCV\n"
+    "12. Ajuste de hiperparâmetros do Random Forest com GridSearchCV\n"
    ]
   },
   {
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13: Ajuste de hiperparâmetros do modelo Decision Tree com GridSearchCV\n"
+    "13. Ajuste de hiperparâmetros do modelo Decision Tree com GridSearchCV\n"
    ]
   },
   {
@@ -1458,7 +1458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14: Treinamento do modelo final Decision Tree com hiperparâmetros otimizados\n"
+    "14. Treinamento do modelo final Decision Tree com hiperparâmetros otimizados\n"
    ]
   },
   {
@@ -2375,7 +2375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15: Avaliação do modelo Decision Tree no conjunto de teste"
+    "15. Avaliação do modelo Decision Tree no conjunto de teste"
    ]
   },
   {
@@ -2412,7 +2412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16: Treinamento do modelo final Random Forest com hiperparâmetros otimizados"
+    "16. Treinamento do modelo final Random Forest com hiperparâmetros otimizados"
    ]
   },
   {
@@ -3425,12 +3425,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "17: Comparação final de desempenho entre os modelos de classificação"
+    "17. Comparação final de desempenho entre os modelos de classificação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3488,15 +3488,15 @@
        "1  Decision Tree (Ajustada)  0.999426        1.0  0.998062   0.99903"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_final = {\n",
-    "    \"Random Forest (Final)\": best_rf,\n",
-    "    \"Decision Tree (Ajustada)\": best_dt\n",
+    "    \"Random Forest (Final)\": best_rf,    # Modelo Random Forest otimizado\n",
+    "    \"Decision Tree (Ajustada)\": best_dt  # Modelo Decision Tree otimizado\n",
     "}\n",
     "\n",
     "results = []\n",
@@ -3504,12 +3504,14 @@
     "for name, model in models_final.items():\n",
     "    y_pred = model.predict(X_test_clean)\n",
     "\n",
+    "  # Calcular métricas de desempenho\n",
+    "\n",
     "    results.append({\n",
     "        \"Modelo\": name,\n",
-    "        \"Accuracy\": accuracy_score(y_test, y_pred),\n",
-    "        \"Precision\": precision_score(y_test, y_pred),\n",
-    "        \"Recall\": recall_score(y_test, y_pred),\n",
-    "        \"F1-score\": f1_score(y_test, y_pred)\n",
+    "        \"Accuracy\": accuracy_score(y_test, y_pred),       # Acurácia geral\n",
+    "        \"Precision\": precision_score(y_test, y_pred),     # Precisão da classe positiva\n",
+    "        \"Recall\": recall_score(y_test, y_pred),           # Recall da classe positiva\n",
+    "        \"F1-score\": f1_score(y_test, y_pred)              # F1-score (equilíbrio entre precisão e recall)\n",
     "    })\n",
     "\n",
     "df_results_final = pd.DataFrame(results)\n",
