pré-processamento textual NLP

--- a/notebooks/books-dataset.ipynb
+++ b/notebooks/books-dataset.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Aprendizado de Máquina"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1) Leitura do dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +171,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +429,7 @@
        "9    104 min           104           min"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +596,7 @@
        "9                                      United States  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +729,7 @@
        "9                                 [Comedies, Dramas]  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +904,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1163,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1207,9 +1214,9 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression F1-score médio: 0.9983\n",
-      "DecisionTree F1-score médio: 0.9983\n",
-      "RandomForest F1-score médio: 0.9985\n",
-      "GradientBoosting F1-score médio: 0.9981\n",
+      "DecisionTree F1-score médio: 0.9984\n",
+      "RandomForest F1-score médio: 0.9983\n",
+      "GradientBoosting F1-score médio: 0.9983\n",
       "SVM F1-score médio: 0.9596\n"
      ]
     }
@@ -1266,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2359,7 @@
        "DecisionTreeClassifier(random_state=42)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2411,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3402,7 +3409,7 @@
        "RandomForestClassifier(n_estimators=50, random_state=42)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3424,7 +3431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3482,7 +3489,7 @@
        "1  Decision Tree (Ajustada)  0.999426        1.0  0.998062   0.99903"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3537,7 +3544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3546,7 +3553,7 @@
        "(8709, 46)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3571,7 +3578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3593,7 +3600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3642,7 +3649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3658,7 +3665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3729,7 +3736,7 @@
        "3  K-Means  5    0.056452        2.174697"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3768,7 +3775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3846,7 @@
        "3  Agglomerative  5    0.074143        2.531952"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3877,7 +3884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3914,7 +3921,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3957,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4060,7 +4067,7 @@
        "7  Agglomerative  5    0.074143        2.531952"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4090,6 +4097,169 @@
     "\n",
     "Dessa forma, o **K-Means com k = X** foi considerado o modelo mais promissor para a tarefa de clusterização dos dados.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processamento de Linguagem Natural"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Seleção e limpeza básica do texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>as her father nears the end of his life, filmm...</td>\n",
+       "      <td>Movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>after crossing paths at a party, a cape town t...</td>\n",
+       "      <td>TV Show</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>to protect his family from a powerful drug lor...</td>\n",
+       "      <td>TV Show</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>feuds, flirtations and toilet talk go down amo...</td>\n",
+       "      <td>TV Show</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>in a city of coaching centers known to train i...</td>\n",
+       "      <td>TV Show</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>the arrival of a charismatic young priest brin...</td>\n",
+       "      <td>TV Show</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>equestria's divided. but a bright-eyed hero be...</td>\n",
+       "      <td>Movie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         description     type\n",
+       "0  as her father nears the end of his life, filmm...    Movie\n",
+       "1  after crossing paths at a party, a cape town t...  TV Show\n",
+       "2  to protect his family from a powerful drug lor...  TV Show\n",
+       "3  feuds, flirtations and toilet talk go down amo...  TV Show\n",
+       "4  in a city of coaching centers known to train i...  TV Show\n",
+       "5  the arrival of a charismatic young priest brin...  TV Show\n",
+       "6  equestria's divided. but a bright-eyed hero be...    Movie"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nlp = df[[\"description\", \"type\"]].copy()                            # Seleção apenas as colunas necessárias para NLP\n",
+    "df_nlp = df_nlp.dropna(subset=[\"description\"])                         # Remover linhas com descrição ausente\n",
+    "df_nlp[\"description\"] = df_nlp[\"description\"].str.lower().str.strip()  # Converter todo o texto para letras minúsculas\n",
+    "df_nlp.head(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Codificação da variável alvo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type_label\n",
+       "0    6131\n",
+       "1    2578\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Codificar a variável alvo pois modelos de ML trabalham com números, não strings.\n",
+    "\n",
+    "df_nlp[\"type_label\"] = df_nlp[\"type\"].map({\n",
+    "    \"Movie\": 0,\n",
+    "    \"TV Show\": 1\n",
+    "})\n",
+    "\n",
+    "df_nlp[\"type_label\"].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Separação de features e target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separação das variáveis X e y\n",
+    "\n",
+    "X_text = df_nlp[\"description\"]\n",
+    "y_text = df_nlp[\"type_label\"]"
+   ]
   }
  ],
  "metadata": {
@@ -4108,7 +4278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
